--- a/index.html
+++ b/index.html
@@ -3,46 +3,28 @@
 <head>
   <meta charset="utf-8">
   <title>Titre de la page</title>
-  <link rel="stylesheet" href="bootstrap.min.css"> 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+<div style="background-color: 	#66FCF1;">
+      <h1 id="txtbanner"> Bienvenue sur notre Lala'Trad </h1>
+</div>
       
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search">
-            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
 </head>
-<body>
+<hr>
+<body style="background-color: #1F2833;">
  <form method="POST" action="index.php">
-     Artiste :
-     <input type="text" name="artist"></br>
-     Titre : 
-     <input type="text" name="title"></br> 
-    Source language: </br>
-        <input type="text" name="sourceLang"></br>
-    Target language :</br>
-        <input type="text" name="targetLang"></br>
-    <button  type="submit">Submit</button>
+    <div class="form-group" id="ladiv">
+     <label for="" style="color:#66FCF1">Artiste :</label> 
+     <input type="text" name="artist" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
+     <label for="" style="color:#66FCF1"> Titre : </label>
+     <input type="text" name="title" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br> 
+    <label for="" style="color:#66FCF1"> Source language: </label></br>
+        <input type="text" name="sourceLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
+    <label for="" style="color:#66FCF1"> Target language :</label></br>
+        <input type="text" name="targetLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
+    <button  type="submit" class="btn btn-primary" style="background-color:#66FCF1;color:#1F2833">Submit</button>
+    </div>
 </form>
 </body>
 </html>
