--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="fr">
-<head>
+<head style="background-color: 	#66FCF1;">
   <meta charset="utf-8">
   <title>Titre de la page</title>
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <div style="background-color: 	#66FCF1;">
-      <h1 id="txtbanner"> Bienvenue sur notre Lala'Trad </h1>
+      <h1 id="txtbanner" style="color:#1F2833;height: 150px; padding-top: 4%;"> <i class="fas fa-music"></i>
+         Bienvenue sur Lala'Trad <i class="fas fa-music"></i>
+      </h1>
 </div>
       
 </head>
@@ -23,7 +26,7 @@
         <input type="text" name="sourceLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
     <label for="" style="color:#66FCF1"> Target language :</label></br>
         <input type="text" name="targetLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
-    <button  type="submit" class="btn btn-primary" style="background-color:#66FCF1;color:#1F2833">Submit</button>
+    <button  type="submit" class="btn btn-primary" style="background-color:#66FCF1;color:#1F2833"><i class="fas fa-play"></i></button>
     </div>
 </form>
 </body>
