--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" name="sourceLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
     <label for="" style="color:#66FCF1"> Target language :</label></br>
         <input type="text" name="targetLang" class="form-control" id="form-control" style="background-color: #f1f8fe;"></br>
-    <button  type="submit" class="btn btn-primary" style="background-color:#66FCF1;color:#1F2833"><i class="fas fa-play"></i></button>
+    <button  type="submit" class="btn btn-primary" style="background-color:#66FCF1;color:#1F2833;margin-left: 22%"><i class="fas fa-play"></i></button>
     </div>
 </form>
 </body>
